# issueRadar-AI

./: .env.example  .env.production.example  .gitignore  .prettierignore  CHANGELOG.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  fly.toml  koyeb.yaml  package-lock.json  package.json  render.yaml  vercel.json
apps/api/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 001_create_users_table.py  002_create_repositories_table.py  003_create_sync_tables.py  004_create_issue_scores_table.py  005_create_issue_analyses_table.py  006_extend_issue_analysis_table.py  007_create_automation_and_notification_tables.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py
apps/api/app/core/: __init__.py  cache.py  celery_app.py  config.py  db.py  logging.py  rate_limit.py  redis.py  security.py
apps/api/app/models/: __init__.py  analysis.py  bookmark.py  issue.py  notification.py  repository.py  saved_search.py  score.py  sync_job.py  user.py
apps/api/app/repositories/: __init__.py  analysis.py  bookmark.py  issue.py  notification.py  repository.py  saved_search.py  score.py  search.py  sync_job.py
apps/api/app/schemas/: __init__.py  analysis.py  (+10 more)
apps/api/scripts/: db_backup.py
apps/api/tests/: conftest.py  test_ai_providers.py  test_analysis.py  test_auth.py  test_automation.py  test_health.py  test_production.py  test_repositories.py  test_scoring.py  test_search.py  test_sync.py  test_workers.py
(+61 files in other folders)
