[project]
name = "issueradar-api"
version = "0.1.0"
description = "IssueRadar AI FastAPI Backend Application"
authors = [{ name = "IssueRadar AI Team" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.28",
    "asyncpg>=0.29.0",
    "redis[hiredis]>=5.0.3",
    "httpx>=0.27.0",
    "pyjwt>=2.8.0",
    "cryptography>=42.0.0",
    "alembic>=1.13.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.5"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["UP017"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
